@@ -26,12 +26,15 @@ plot.mcarlo <-
                         seq(from = 0, to = max(x, na.rm = TRUE), by = 0.01))
     if (show[1]) {
         range.dists <- max(evalDists)
-        hist(x, freq = FALSE, xlim = c(0, range.dists), main = "",
-             xlab = "", ylab = "", ann = FALSE, col = col.poly,
+        h <- hist(x, freq = FALSE, plot = FALSE)
+        d <- density(x, adjust = 2, from = 0, to = range.dists)
+        y.lim <- range(0, h$density, d$y)
+        hist(x, freq = FALSE, ylim = y.lim, xlim = c(0, range.dists),
+             main = "", xlab = "", ylab = "", ann = FALSE, col = col.poly,
              border = border.poly)
         box()
         title(main = caption[1], ylab = "Density", xlab = xlabel)
-        lines(density(x, adjust = 2, from = 0, to = range.dists))
+        lines(d)
     }
     if (show[2]) {
         num.dists <- length(x)
