@@ -43,7 +43,9 @@ Version 0.6-0
 	* print.mat, summary.mat: quantiles of dissimilarities are now much
 	more efficiently calculated.
 
-	* plot.mcarlo: now works correctly for both types of plot.
+	* plot.mcarlo: now works correctly for both types of plot, and 
+	computes ranges so that histogram and density estimates fit into
+	plotting region.
 
 Version 0.5-3
 
